using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    //animation Tags
    public static string WalkBool = "Walk";
    public static string JumpTrigger = "Jump";
    public static string IsOnGroundBool = "IsOnGround";

    //Collider Tags
    public static string Player = "Player";
    public static string Ground = "Ground";
    public static string Wall = "Wall";
    public static string Laser = "Laser";
    public static string Battery = "Battery";
    
    //Enemy Tags
    public static string Bullet = "Bullet";
    public static string Move = "Move";
    public static string Shoot = "Shoot";

}